@@ -218,7 +218,7 @@
         <skipTests>false</skipTests>
         <slf4j.version>1.7.32</slf4j.version>
         <surefireArgLine>-Xmx${build.jvmsize} -XX:MaxDirectMemorySize=512m</surefireArgLine>
-        <swagger.version>1.6.3</swagger.version>
+        <swagger.version>2.1.12</swagger.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -310,7 +310,7 @@
             <dependency>
                 <groupId>com.github.spotbugs</groupId>
                 <artifactId>spotbugs-annotations</artifactId>
-                <version>4.5.0</version>
+                <version>4.5.3</version>
             </dependency>
             <dependency>
                 <groupId>com.github.tomakehurst</groupId>
@@ -369,12 +369,12 @@
             <dependency>
                 <groupId>com.h2database</groupId>
                 <artifactId>h2</artifactId>
-                <version>1.4.200</version>
+                <version>2.0.206</version>
             </dependency>
             <dependency>
                 <groupId>com.izettle</groupId>
                 <artifactId>dropwizard-metrics-influxdb</artifactId>
-                <version>1.2.1-rc1</version>
+                <version>1.3.4</version>
                 <exclusions>
                     <exclusion>
                         <!-- We use jakarta.validation:jakarta.validation-api instead -->
@@ -416,7 +416,7 @@
             <dependency>
                 <groupId>com.zaxxer</groupId>
                 <artifactId>HikariCP</artifactId>
-                <version>4.0.3</version>
+                <version>5.0.1</version>
             </dependency>
             <dependency>
                 <groupId>commons-codec</groupId>
@@ -437,13 +437,13 @@
                 <groupId>io.airlift</groupId>
                 <artifactId>concurrent</artifactId>
                 <!-- 207 requires Java 11 -->
-                <version>206</version>
+                <version>213</version>
             </dependency>
             <dependency>
                 <groupId>io.airlift</groupId>
                 <artifactId>log</artifactId>
                 <!-- 207 requires Java 11 -->
-                <version>206</version>
+                <version>213</version>
             </dependency>
             <dependency>
                 <groupId>io.airlift</groupId>
@@ -609,13 +609,13 @@
                 <version>${netty.version}</version>
             </dependency>
             <dependency>
-                <groupId>io.swagger</groupId>
+                <groupId>io.swagger.core.v3</groupId>
                 <artifactId>swagger-annotations</artifactId>
                 <version>${swagger.version}</version>
             </dependency>
             <dependency>
-                <groupId>io.swagger</groupId>
-                <artifactId>swagger-jaxrs</artifactId>
+                <groupId>io.swagger.core.v3</groupId>
+                <artifactId>swagger-jaxrs2</artifactId>
                 <version>${swagger.version}</version>
                 <exclusions>
                     <exclusion>
@@ -631,7 +631,7 @@
                 </exclusions>
             </dependency>
             <dependency>
-                <groupId>io.swagger</groupId>
+                <groupId>io.swagger.core.v3</groupId>
                 <artifactId>swagger-models</artifactId>
                 <version>${swagger.version}</version>
             </dependency>
@@ -680,7 +680,7 @@
             <dependency>
                 <groupId>javax.servlet</groupId>
                 <artifactId>javax.servlet-api</artifactId>
-                <version>3.1.0</version>
+                <version>4.0.1</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
@@ -2762,8 +2762,7 @@
             </activation>
             <properties>
                 <maven.compiler.release>11</maven.compiler.release>
-                <!-- illegal-access=permit is for cglib (jDBI) -->
-                <surefireArgLine>-Xmx${build.jvmsize} -XX:MaxDirectMemorySize=512m --illegal-access=permit</surefireArgLine>
+                <surefireArgLine>-Xmx${build.jvmsize} -XX:MaxDirectMemorySize=512m</surefireArgLine>
             </properties>
         </profile>
     </profiles>
